--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
  "description": "",
  "keywords": [],
  "main": "src/index.js",
+ "license": "MIT",
  "dependencies": {
   "react": "16.8.0",
   "react-dom": "16.8.0",
@@ -18,5 +19,10 @@
   "test": "react-scripts test --env=jsdom",
   "eject": "react-scripts eject"
  },
- "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+ "browserslist": [
+  ">0.2%",
+  "not dead",
+  "not ie <= 11",
+  "not op_mini all"
+ ]
 }
